welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:7: error: not found: value Fizz
			return Fizz
                               ^fizzBuzz:9: error: not found: value c
			if (c==0) {
                            ^fizzBuzz:10: error: not found: value Fizz
				return Fizz Buzz
                                       ^fizzBuzz:12: error: not found: value Buzz
				return Buzz
                                       ^